--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cpx \"node_modules/fomantic-ui/dist/semantic.min.css\" public/assets/css && cpx \"node_modules/fomantic-ui/dist/semantic.min.js\" public/assets/js"
+    "dev": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,14 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
-    "cpx": "^1.5.0"
-  }
+    "vite": "^7.2.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/paulowh/DevBox_.git"
+  },
+  "bugs": {
+    "url": "https://github.com/paulowh/DevBox_/issues"
+  },
+  "homepage": "https://github.com/paulowh/DevBox_#readme"
 }
