config router, database

--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,6 @@ RewriteEngine On
 
 # Redirecionar para a pasta public
 
-RewriteCond %{REQUEST_URI} !^/public/
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.\*)$ public/$1 [L]
