--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         }
     ],
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "illuminate/database": "^12.39",
+        "symfony/routing": "^7.3",
+        "symfony/http-foundation": "^7.3",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
