fix: adicionar configurações para resolver erro 403 no Hostinger - melhorar .htaccess com Options -Indexes - adicionar .htaccess em pastas críticas - criar .env.hostinger de exemplo - atualizar documentação de deploy

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,11 @@
-RewriteEngine On
+<IfModule mod_rewrite.c>
+    RewriteEngine On
 
-# Redirecionar para a pasta public
+    # Redirecionar para a pasta public
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ public/$1 [L]
+</IfModule>
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.\*)$ public/$1 [L]
+# Impedir listagem de diretórios
+Options -Indexes
