--- a/.env.hostinger
+++ b/.env.hostinger
@@ -1,25 +1,24 @@
 # ===============================================
-# INSTRUÇÕES PARA CONFIGURAR NO HOSTINGER
+# CONFIGURAÇÃO PARA HOSTINGER - DevBox
 # ===============================================
-# 1. Renomeie este arquivo para: .env
-# 2. Preencha os dados do banco de dados
-# 3. Configure o APP_URL com seu domínio
+# Este é um template de exemplo
+# Configure com seus dados reais do Hostinger
 # ===============================================
 
 # Application
 APP_NAME="DevBox"
 APP_ENV=production
 APP_DEBUG=false
-APP_URL=https://seudominio.com.br
+APP_URL=https://devbox.paulowh.com
 
-# Database - OBTENHA ESTES DADOS NO PAINEL DO HOSTINGER
-# Vá em: Databases > MySQL Databases
+# Database - Configure com dados do painel Hostinger
+# Painel > Databases > MySQL Databases
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=193.203.175.83
 DB_PORT=3306
-DB_DATABASE=u123456789_devbox
-DB_USERNAME=u123456789_user
-DB_PASSWORD=SuaSenhaAqui
+DB_DATABASE=u687609827_dev
+DB_USERNAME=u687609827_dev
+DB_PASSWORD=sua_senha_aqui
 
 # Paths (deixe vazio para produção)
 BASE_PATH=
