fix: atualizar todos os caminhos para usar estrutura com maiúsculas - corrigir vite.config.js: app/Resources - corrigir helpers.php: Storage e Resources - corrigir DatabaseInitializer, Migrator, Router, View - rebuild assets com novos caminhos

--- a/public/assets/.vite/manifest.json
+++ b/public/assets/.vite/manifest.json
@@ -1,8 +1,8 @@
 {
-  "app/resources/js/app.js": {
+  "app/Resources/js/app.js": {
     "file": "js/app-BG2m_dln.js",
     "name": "app",
-    "src": "app/resources/js/app.js",
+    "src": "app/Resources/js/app.js",
     "isEntry": true,
     "css": [
       "css/app-CaRrcMmM.css"
