removendo dependencias obsoletas

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 APP_NAME="DevBox"
 APP_ENV=development
 APP_DEBUG=true
-APP_URL=http://localhost/devbox_
+APP_URL=http://localhost/
 
 # Database
 DB_CONNECTION=mysql
@@ -13,4 +13,4 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 # Paths
-BASE_PATH=/devbox_
+BASE_PATH=/
