--- a/.env.production
+++ b/.env.production
@@ -14,11 +14,11 @@ APP_URL=https://devbox.paulowh.com
 # Database - Configure com dados do painel Hostinger
 # Painel > Databases > MySQL Databases
 DB_CONNECTION=mysql
-DB_HOST=193.203.175.83
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=u687609827_dev
-DB_USERNAME=u687609827_dev
-DB_PASSWORD=sua_senha_aqui
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 # Paths (deixe vazio para produção)
 BASE_PATH=
